@@ -186,6 +186,20 @@ newline	tab\134backslash ~tilde\177DEL\200\201.
 > base32d: 42 42
 > Failed: argument for base32d operator is "ABC", which is not a base 32 number
 > 
+> base32hex: 0  <>
+> base32hex: 1  <1>
+> base32hex: 31 <V>
+> base32hex: 32 <10>
+> base32hex: 42 <1A>
+> Failed: argument for base32hex operator is "0x1", which is not a decimal number
+> 
+> base32hexd: 0  0
+> base32hexd: 1  1
+> base32hexd: 31 31
+> base32hexd: 32 32
+> base32hexd: 42 42
+> Failed: argument for base32d operator is "WXY", which is not a base 32 number
+> 
 > The base62 operator is actually a base36 operator in the Darwin and Cygwin
 > environments. Write cunning tests that produce the same output in both cases,
 > while doing a reasonable check.
@@ -254,6 +268,14 @@ newline	tab\134backslash ~tilde\177DEL\200\201.
 > base64d:abcd
 > base64d:The quick brown 
  fox
+> base64:     PT0+
+> base64:     PT0/
+> base64url:  PT0-
+> base64url:  PT0_
+> base64d:    ==>
+> base64d:    ==?
+> base64urld: ==>
+> base64urld: ==?
 > strlen: 0
 > strlen: 1
 > strlen: 8
